[package]
name = "rfreq"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.5", features = ["derive"] } # used for reading command line arguments
regex = "1.5.5" # used for parsing regex
prettytable-rs = "0.8.0" # used for printing result as a table
